--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8" />
+<head>
+    <meta charset="UTF-8"/>
     <title>Résumé</title>
     <link rel="stylesheet" href="https://volodymyrkushnir.com/assets/stylesheets/base.css">
-  </head>
-  <body>
-    ― Hello World! &#x1F609;
-  </body>
+</head>
+<body>
+<main>
+    <article>
+        <div class="page" style="border-color: midnightblue;">
+            <!-- Content -->
+        </div>
+    </article>
+</main>
+</body>
 </html>
