--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8"/>
     <title>Résumé</title>
     <link rel="stylesheet" href="https://volodymyrkushnir.com/assets/stylesheets/base.css">
+    <script type="text/javascript"
+            src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js"></script>
 </head>
 <body>
 <main>
@@ -17,13 +19,39 @@
                     <div class="thirteen wide column">
                         <div class="stackable grid">
                             <div class="sixteen wide column">
-                                <!-- Name, job, contacts -->
+                                <h1 class="name">Donald Trump</h1>
+
+                                <a href="https://www.fb.com/DonaldTrump" rel="author" class="facebook">
+                                    <span class="fab fa-facebook-f"></span>
+                                    facebook
+                                </a>
+                                <a href="mailto:realDonaldTrump@whitehouse.gov" rel="author" class="mail">
+                                    <span class="far fa-envelope"></span>
+                                    mail
+                                </a>
+                                <a href="https://twitter.com/realDonaldTrump" rel="author" class="twitter">
+                                    <span class="fab fa-twitter"></span>
+                                    twitter
+                                </a>
+                                <a href="https://www.instagram.com/realDonaldTrump/" rel="author" class="instagram">
+                                    <span class="fab fa-instagram"></span>
+                                    instagram
+                                </a>
+
                             </div>
                             <div class="sixteen wide mobile only column">
                                 <div class="divider"></div>
                             </div>
                             <div class="sixteen wide column">
-                                <!-- Intro -->
+                                <h2>Résumé</h2>
+                                <p>
+                                    ― I'm the most successful person ever to run for the presidency, by far.
+                                    Nobody's ever been more successful than me. I'm the most successful person
+                                    ever to run. Ross Perot isn't successful like me. Romney ― I have a Gucci
+                                    store that's worth more than Romney. Sorry losers and haters, but my IQ is
+                                    one of the highest ― and you all know it! Please don't feel so stupid or
+                                    insecure, it's not your fault.
+                                </p>
                             </div>
                         </div>
                     </div>
