--- a/index.html
+++ b/index.html
@@ -10,11 +10,14 @@
 <body>
 <main>
     <article>
-        <div class="page" style="border-color: midnightblue;">
+        <div class="page" style="border-color: #191970;">
             <div class="stackable grid">
                 <div class="row">
                     <div class="three wide center aligned column">
-                        <!-- Avatar -->
+                        <div class="avatar-wrapper">
+                            <object class="avatar" data="./assets/images/avatar.svg" role="img"
+                                    aria-label="My profile picture" style="width:75%;"></object>
+                        </div>
                     </div>
                     <div class="thirteen wide column">
                         <div class="stackable grid">
@@ -25,14 +28,17 @@
                                     <span class="fab fa-facebook-f"></span>
                                     facebook
                                 </a>
+                                &nbsp;&nbsp;&nbsp;&nbsp;
                                 <a href="mailto:realDonaldTrump@whitehouse.gov" rel="author" class="mail">
                                     <span class="far fa-envelope"></span>
                                     mail
                                 </a>
+                                &nbsp;&nbsp;&nbsp;&nbsp;
                                 <a href="https://twitter.com/realDonaldTrump" rel="author" class="twitter">
                                     <span class="fab fa-twitter"></span>
                                     twitter
                                 </a>
+                                &nbsp;&nbsp;&nbsp;&nbsp;
                                 <a href="https://www.instagram.com/realDonaldTrump/" rel="author" class="instagram">
                                     <span class="fab fa-instagram"></span>
                                     instagram
