Add more styles, button Read More

--- a/index.html
+++ b/index.html
@@ -4,42 +4,43 @@
     <meta charset="UTF-8"/>
     <title>Résumé</title>
     <link rel="stylesheet" href="https://volodymyrkushnir.com/assets/stylesheets/base.css">
-    <script type="text/javascript"
-            src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js"></script>
+    <link rel="stylesheet" href="./assets/stylesheet/style.css">
 </head>
 <body>
 <main>
     <article>
-        <div class="page" style="border-color: #191970;">
+        <div class="page" style="border-color: #13c1b9;">
             <div class="stackable grid">
                 <div class="row">
                     <div class="three wide center aligned column">
                         <div class="avatar-wrapper">
                             <object class="avatar" data="./assets/images/avatar.svg" role="img"
-                                    aria-label="My profile picture" style="width:75%;"></object>
+                                    aria-label="My profile picture"></object>
                         </div>
                     </div>
                     <div class="thirteen wide column">
                         <div class="stackable grid">
                             <div class="sixteen wide column">
                                 <h1 class="name">Donald Trump</h1>
+                                <div class="job">President of The USA</div>
 
-                                <a href="https://www.fb.com/DonaldTrump" rel="author" class="facebook">
+                                <a href="https://www.fb.com/DonaldTrump" rel="author" class="facebook social">
                                     <span class="fab fa-facebook-f"></span>
                                     facebook
                                 </a>
                                 &nbsp;&nbsp;&nbsp;&nbsp;
-                                <a href="mailto:realDonaldTrump@whitehouse.gov" rel="author" class="mail">
+                                <a href="mailto:realDonaldTrump@whitehouse.gov" rel="author" class="mail social">
                                     <span class="far fa-envelope"></span>
                                     mail
                                 </a>
                                 &nbsp;&nbsp;&nbsp;&nbsp;
-                                <a href="https://twitter.com/realDonaldTrump" rel="author" class="twitter">
+                                <a href="https://twitter.com/realDonaldTrump" rel="author" class="twitter social">
                                     <span class="fab fa-twitter"></span>
                                     twitter
                                 </a>
                                 &nbsp;&nbsp;&nbsp;&nbsp;
-                                <a href="https://www.instagram.com/realDonaldTrump/" rel="author" class="instagram">
+                                <a href="https://www.instagram.com/realDonaldTrump/" rel="author"
+                                   class="instagram social">
                                     <span class="fab fa-instagram"></span>
                                     instagram
                                 </a>
@@ -70,6 +71,7 @@
                 <div class="row">
                     <div class="ten wide column">
                         <h3>Experience</h3>
+
                         <ul class="timeline">
                             <li>
                                 <p><small>2017</small></p>
@@ -90,7 +92,9 @@
                                     Became the most important Republican nominating for presidential election run
                                 </p>
                             </li>
+                        </ul>
 
+                        <ul class="timeline hidden">
                             <li>
                                 <p><small>2009</small></p>
                                 <p>
@@ -245,7 +249,10 @@
                             </li>
                         </ul>
 
+                        <button class="read-more">Read More</button>
+
                         <h3>Personal Life</h3>
+
                         <ul class="timeline">
                             <li>
                                 <p><small>2006</small></p>
@@ -267,7 +274,9 @@
                                     Met my future third wife, Melania Knauss
                                 </p>
                             </li>
+                        </ul>
 
+                        <ul class="timeline hidden">
                             <li>
                                 <p><small>1999</small></p>
                                 <p>
@@ -320,7 +329,10 @@
                             </li>
                         </ul>
 
+                        <button class="read-more">Read More</button>
+
                         <h3>Media Career</h3>
+
                         <ul class="timeline">
                             <li>
                                 <p><small>2019</small></p>
@@ -336,6 +348,9 @@
                                     Published a book "Crippled America: How to Make America Great Again"
                                 </p>
                             </li>
+                        </ul>
+
+                        <ul class="timeline hidden">
 
                             <li>
                                 <p><small>2011</small></p>
@@ -510,6 +525,8 @@
                             </li>
                         </ul>
 
+                        <button class="read-more">Read More</button>
+
                         <h3>Education</h3>
                         <ul class="timeline">
                             <li>
@@ -529,6 +546,9 @@
                                     1968 with a B.S. in economics
                                 </p>
                             </li>
+                        </ul>
+
+                        <ul class="timeline hidden">
 
                             <li>
                                 <p><small>1964</small></p>
@@ -545,40 +565,26 @@
                                     discovered I made frequent trips into Manhattan without their permission
                                 </p>
                             </li>
+
                         </ul>
+
+                        <button class="read-more">Read More</button>
+
                     </div>
                     <div class="six wide column">
                         <section>
                             <h3>Languages</h3>
-                            <p class="tags small"><span class="language" lang="en">&#x1f1fa;&#x1f1f8; ENGLISH</span></p>
-                            <p class="tags small"><span class="language" lang="en">&#x1F1FA;&#x1F1E6; УКРАЇНСЬКА</span>
+                            <p class="tags small"><span class="language"
+                                                        lang="en">&#x1f1fa;&#x1f1f8;&nbsp;ENGLISH</span>
+                                <span class="language" lang="en">&#x1F1FA;&#x1F1E6;&nbsp;УКРАЇНСЬКА</span>
                             </p>
                         </section>
                         <section>
                             <h3>Skills</h3>
                             <p class="tags small">
-                                NEGOTIATING
-                                COUNTING
-                                REMODELING
-                                WRITING
-                                ACING
-                                SINGING
-                                REPORTING
-                                INCORPORATING
-                                SELLING
-                                ADVERTISING
-                                HOSTING
-                                COMPETING
-                                TWITTING
-                                PARENTING
-                                GAMBLING
-                                DATING
-                                SUING
-                                ORGANIZING
-                                FUNDING
-                                DEBATING
-                                ADVISING
-                                PRESBYTERIANING
+                                NEGOTIATING COUNTING REMODELING WRITING ACING SINGING REPORTING INCORPORATING
+                                SELLING ADVERTISING HOSTING COMPETING TWITTING PARENTING GAMBLING
+                                DATING SUING ORGANIZING FUNDING DEBATING ADVISING PRESBYTERIANING
                             </p>
                         </section>
                         <section>
@@ -617,5 +623,9 @@
         </div>
     </article>
 </main>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.0/jquery.min.js"></script>
+<script type="text/javascript"
+        src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js"></script>
+<script type="text/javascript" src="assets/scripts/read_more.js"></script>
 </body>
 </html>
