Fix validatation data, add meta data and favicon

--- a/index.html
+++ b/index.html
@@ -1,7 +1,22 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta charset="UTF-8"/>
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="description" content="The personal site of Donald Trump.">
+    <meta name="subject" content="This is just a résumé.">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="theme-color" content="white">
+    <meta property="og:description"
+          content="― I'm the most successful person ever to run for the presidency, by far. Nobody's ever been more successful than me. I'm the most successful person ever to run. Ross Perot isn't successful like me. Romney ― I have a Gucci store that's worth more than Romney. Sorry losers and haters, but my IQ is one of the highest ― and you all know it! Please don't feel so stupid or insecure, it's not your fault.">
+    <meta property="og:locale" content="en_US">
+    <meta property="og:title" content="Donald Trump &mdash; Résumé">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://grytsiuko.github.io/homepage/">
+    <link rel="icon" type="image/x-icon" href="./favicon.ico">
+    <link rel="me" href="https://www.fb.com/DonaldTrump" type="text/html">
+    <link rel="me" href="mailto:realDonaldTrump@whitehouse.gov">
     <title>Résumé</title>
     <link rel="stylesheet" href="https://volodymyrkushnir.com/assets/stylesheets/base.css">
     <link rel="stylesheet" href="./assets/stylesheet/style.css">
@@ -623,9 +638,11 @@
         </div>
     </article>
 </main>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.0/jquery.min.js"></script>
-<script type="text/javascript"
-        src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js"></script>
-<script type="text/javascript" src="assets/scripts/read_more.js"></script>
+
+<footer><em>&copy; BSA 2020</em></footer>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.0/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js"></script>
+<script src="assets/scripts/read_more.js"></script>
 </body>
 </html>
