Add random quotes to the top

--- a/index.html
+++ b/index.html
@@ -22,6 +22,16 @@
     <link rel="stylesheet" href="./assets/stylesheet/style.css">
 </head>
 <body>
+
+<div id="quote-wrapper">
+    <div id="quote">
+        <div id="cross"><span class="fas fa-times"></span></div>
+        <h4></h4>
+        <blockquote></blockquote>
+        <p></p>
+    </div>
+</div>
+
 <main>
     <article>
         <div class="page" style="border-color: #0a2e9a;">
@@ -650,5 +660,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.0/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js"></script>
 <script src="assets/scripts/read_more.js"></script>
+<script src="assets/scripts/quotes.js"></script>
 </body>
 </html>
