Fixed bug with contacts on phones

--- a/index.html
+++ b/index.html
@@ -48,28 +48,28 @@
                             <div class="sixteen wide column">
                                 <h1 class="name">Donald Trump</h1>
                                 <div class="job">President of The USA</div>
-
-                                <a href="https://www.fb.com/DonaldTrump" rel="author" class="facebook social">
-                                    <span class="fab fa-facebook-f"></span>
-                                    facebook
-                                </a>
-                                &nbsp;&nbsp;&nbsp;&nbsp;
-                                <a href="mailto:realDonaldTrump@whitehouse.gov" rel="author" class="mail social">
-                                    <span class="far fa-envelope"></span>
-                                    mail
-                                </a>
-                                &nbsp;&nbsp;&nbsp;&nbsp;
-                                <a href="https://twitter.com/realDonaldTrump" rel="author" class="twitter social">
-                                    <span class="fab fa-twitter"></span>
-                                    twitter
-                                </a>
-                                &nbsp;&nbsp;&nbsp;&nbsp;
-                                <a href="https://www.instagram.com/realDonaldTrump/" rel="author"
-                                   class="instagram social">
-                                    <span class="fab fa-instagram"></span>
-                                    instagram
-                                </a>
-
+                                <div class="contacts">
+                                    <a href="https://www.fb.com/DonaldTrump" rel="author" class="facebook social">
+                                        <span class="fab fa-facebook-f"></span>
+                                        facebook
+                                    </a>
+                                    &nbsp;&nbsp;&nbsp;&nbsp;
+                                    <a href="mailto:realDonaldTrump@whitehouse.gov" rel="author" class="mail social">
+                                        <span class="far fa-envelope"></span>
+                                        mail
+                                    </a>
+                                    &nbsp;&nbsp;&nbsp;&nbsp;
+                                    <a href="https://twitter.com/realDonaldTrump" rel="author" class="twitter social">
+                                        <span class="fab fa-twitter"></span>
+                                        twitter
+                                    </a>
+                                    &nbsp;&nbsp;&nbsp;&nbsp;
+                                    <a href="https://www.instagram.com/realDonaldTrump/" rel="author"
+                                       class="instagram social">
+                                        <span class="fab fa-instagram"></span>
+                                        instagram
+                                    </a>
+                                </div>
                             </div>
                             <div class="sixteen wide mobile only column">
                                 <div class="divider"></div>
