--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta property="og:title" content="Donald Trump &mdash; Résumé">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://grytsiuko.github.io/homepage/">
-    <link rel="icon" type="image/x-icon" href="./favicon.ico">
+    <link rel="icon" type="image/x-icon" href="https://grytsiuko.github.io/homepage/favicon.ico">
     <link rel="me" href="https://www.fb.com/DonaldTrump" type="text/html">
     <link rel="me" href="mailto:realDonaldTrump@whitehouse.gov">
     <title>Résumé</title>
